--- a/app/Resources/views/partner/new.html.twig
+++ b/app/Resources/views/partner/new.html.twig
@@ -30,8 +30,8 @@
                                 <p>Site Web du partenaire</p>
                             </div>
                             <div class="col s12 m6 l3">
-                                {{ form_widget(form.mail) }}
-                                {{ form_errors(form.mail) }}
+                                {{ form_widget(form.website) }}
+                                {{ form_errors(form.website) }}
                             </div>
                         </div>
 
