--- a/app/Resources/views/subgallery/edit.html.twig
+++ b/app/Resources/views/subgallery/edit.html.twig
@@ -64,16 +64,24 @@
                             <div class="col s12 m6 l3">
                                 <p>Mettre en avant :</p>
                             </div>
-                            <div class="col s12 m6 l3">
-                                {{ form_widget(edit_form.slider, { 'id': 'test5' }, { 'attr': {'class': 'checksize'} }) }}
-                                {{ form_errors(edit_form.slider) }}
+                            <div class="switch">
+                                <label>
+                                    Off
+                                    {{ form_widget(edit_form.slider, { 'attr': {'class': 'checksize'} }) }}
+                                    {{ form_errors(edit_form.slider) }}
+                                    <span class="lever"></span>
+                                    On
+                                </label>
                             </div>
                         </div>
 
 
                         <div class="row">
                             <div class="col s12 center">
-                                <button class="left" type="submit">
+                                <button class="left" type="submit"
+                                        data-position="bottom"
+                                        data-delay="50"
+                                        data-tooltip="Valider">>
                                     <img src="{{ asset('images/local/icons/plus-icon.svg') }}" class="plus-icon">
                                 </button>
 
@@ -90,7 +98,10 @@
 
                                 {{ form_end(delete_form) }}
 
-                                <a class="" href="{{ path('homepage') }}">
+                                <a class="" href="{{ path('homepage') }}"
+                                   data-position="bottom"
+                                   data-delay="50"
+                                   data-tooltip="Accueil">
                                     <img src="{{ asset('images/local/icons/home-icon.svg') }}" class="plus-icon">
                                 </a>
 
