--- a/app/Resources/views/about/edit.html.twig
+++ b/app/Resources/views/about/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
 {% block body %}
 
@@ -13,7 +13,7 @@
                             <h1 class="center">Nouvel à propos</h1>
                         </div>
 
-                        {{ form_start(form) }}
+                        {{ form_start(edit_form) }}
 
                         <div class="row">
                             <div class="col s12 m6 l3">
@@ -41,12 +41,23 @@
                                     <img src="{{ asset('images/local/icons/plus-icon.svg') }}" class="plus-icon">
                                 </button>
 
+                                {{ form_end(edit_form) }}
+
+                                {{ form_start(delete_form) }}
+
+                                <button class="right" type="submit" name="action"
+                                        data-position="bottom"
+                                        data-delay="50"
+                                        data-tooltip="supprimer">
+                                    <img src="{{ asset('images/local/icons/delete.svg') }}" class="plus-icon">
+                                </button>
+
+                                {{ form_end(delete_form) }}
+
                                 <a class="" href="{{ path('homepage') }}">
                                     <img src="{{ asset('images/local/icons/home-icon.svg') }}" class="plus-icon">
                                 </a>
                             </div>
-
-                            {{ form_end(form) }}
 
                         </div>
 
