--- a/app/Resources/views/header/edit.html.twig
+++ b/app/Resources/views/header/edit.html.twig
@@ -30,8 +30,19 @@
                                 <img src="{{ asset('images/local/icons/plus-icon.svg') }}" class="plus-icon">
                             </button>
 
-                            <a class="" href="{{ path('homepage') }}">
-                                <img src="{{ asset('images/local/icons/home-icon.svg') }}" class="plus-icon">
+                            {{ form_start(delete_form) }}
+
+                            <button class="right" type="submit" name="action"
+                                    data-position="bottom"
+                                    data-delay="50"
+                                    data-tooltip="supprimer">
+                                <img src="{{ asset('images/local/icons/delete.svg') }}" class="plus-icon">
+                            </button>
+
+                            {{ form_end(delete_form) }}
+
+                            <a class="" href="{{ path('header_show_all') }}">
+                                <img src="{{ asset('images/local/icons/menu-icon.svg') }}" class="plus-icon">
                             </a>
                         </div>
 
