--- a/app/Resources/views/subgallery/index.html.twig
+++ b/app/Resources/views/subgallery/index.html.twig
@@ -4,34 +4,50 @@
 
     {% if is_granted('ROLE_ADMIN') %}
 
-        <table>
-            <tbody>
-            {% for subGallery in subGalleries %}
-            {% if Gallery == subGallery.gallery %}
-                <tr>
-                    <td><a href="{{ path('subgallery_show', { 'id': subGallery.id }) }}">{{ subGallery.id }}</a></td>
-                    <td>{{ subGallery.sgallery }}</td>
-                    <td>
-                        <ul>
-                            <li>
-                                <a href="{{ path('subgallery_show', { 'id': subGallery.id }) }}">show</a>
-                            </li>
-                            <li>
-                                <a href="{{ path('subgallery_edit', { 'id': subGallery.id }) }}">edit</a>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-            {% endif %}
-            {% endfor %}
-            </tbody>
-        </table>
+        <div class="container">
+            <div class="row">
+                <div class="col s12">
 
-        <ul>
-            <li>
-                <a href="{{ path('subgallery_new') }}">Create a new subGallery</a>
-            </li>
-        </ul>
+                    <div class="center">
+                        <h1>Liste des objets</h1>
+                    </div>
+
+                </div>
+            </div>
+
+            {% for sgallery in subGalleries %}
+
+                <div class="row">
+                    <div class="col s12 m6 l6">
+                        <div class="row">
+                            <div class="col s12 m6 l6">
+                                <p>{ sgallery.sgallery }}</p>
+                            </div>
+                            <div class="col s12 m6 l6">
+                                <img src="{{ asset(sgallery.media.picpath) }}" alt="{{ sgallery.media.picname }}" class="picsize-listindex">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m6 l6">
+                        <div class="center">
+                            <a href="{{ path('subgallery_edit', { 'id': sgallery.id }) }}">
+                                <img src="{{ asset('images/local/icons/edit.svg') }}" class="plus-icon">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            {% endfor %}
+
+            <div class="row">
+                <div class="col s12 center">
+                    <a href="{{ path('about_new') }}">
+                        <img src="{{ asset('images/local/icons/plus-icon.svg') }}" class="plus-icon">
+                    </a>
+                </div>
+            </div>
+
+        </div>
 
     {% else %}
 
@@ -48,4 +64,5 @@
         </div>
 
     {% endif %}
+
 {% endblock %}
