--- a/app/Resources/views/subgallery/new.html.twig
+++ b/app/Resources/views/subgallery/new.html.twig
@@ -64,15 +64,11 @@
                             <div class="col s12 m6 l3">
                                 <p>Mettre en avant :</p>
                             </div>
-                            {#<div class="col s12 m6 l3">#}
-                                {#{{ form_widget(form.slider, { 'id': 'test5' }, { 'attr': {'class': 'checksize'} }) }}#}
-                                {#{{ form_errors(form.slider) }}#}
-                            {#</div>#}
                             <div class="switch">
                                 <label>
                                     Off
                                     {{ form_widget(form.slider, { 'attr': {'class': 'checksize'} }) }}
-                                    {#<input type="checkbox" name="slider">#}
+                                    {{ form_errors(form.slider) }}
                                     <span class="lever"></span>
                                     On
                                 </label>
@@ -92,7 +88,6 @@
 
                         {{ form_end(form) }}
 
-                        {#<div class="header-buttom-marge"></div>#}
 
                         </div>
                      </div>
