modif calendar image

--- a/app/Resources/views/partner/show.html.twig
+++ b/app/Resources/views/partner/show.html.twig
@@ -2,7 +2,7 @@
 
 {% for partner in partners %}
 
-    <li class="left">
+    <li class="">
         <a class="grey-text text-lighten-3" href="{{ partner.website }}">
             {{ partner.partner }}
         </a>
