--- a/web/css/main.css
+++ b/web/css/main.css
@@ -187,6 +187,15 @@ main {
     flex: 1 0 auto !important;
 }
 
+
+.valign{
+    padding-top: 25%;
+}
+
+.valign-li{
+    padding-top: 3%;
+}
+
 /*******************************************************/
 /*                                                     */
 /*                                                     */
