--- a/src/CalendarBundle/Resources/views/fullcalendar/views/agenda-views.html.twig
+++ b/src/CalendarBundle/Resources/views/fullcalendar/views/agenda-views.html.twig
@@ -36,10 +36,8 @@
                     <div class="card-content modal-body-text">
                         <p><span id="modalTexte"></span></p>
                     </div>
-                    <div>
-                        <img src="modalImage" id="modalImage" class="picsize">
-                    </div>
-
+                    {#<div id="modalImage">#}
+                    {#</div>#}
                 </div>
             </div>
         </div>
