--- a/src/CalendarBundle/Resources/public/css/calendar_main.css
+++ b/src/CalendarBundle/Resources/public/css/calendar_main.css
@@ -98,6 +98,14 @@ select{
     color: darkred;
 }
 
+.align{
+    padding-left: 45%;
+}
+
+.align-edit{
+    padding-left: 20%;
+}
+
 /*********************************************************/
 /******************* PAGE SHOW EDIT NEW ******************/
 /*******************    GLOBAL TABLE    ******************/
