--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -10,7 +10,7 @@
 
     <div class="container">
 
-        <div class="row marge">
+        <div class="row">
             <div class=" col s12 center marge">
             <form action="{{ path("fos_user_security_check") }}" method="post">
                 {% if csrf_token %}
