--- a/src/CalendarBundle/Resources/views/agenda/edit.html.twig
+++ b/src/CalendarBundle/Resources/views/agenda/edit.html.twig
@@ -69,23 +69,30 @@
                             <div class="col s12 m6 l6 calendar-td valign-wrapper">
                                 <p class="calendar-p valign">Couleur de l'évènement :</p>
                             </div>
-                            <div class="col s12 m6 l6 valign-wrapper">
-                                <div class="row valign-wrapper">
-                                    <div class="col s12 m6 l6 center">
+                            <div class="col s12 m6 l6">
+                                <div class="row align-edit">
+                                    <div class="col s12 m6 l6">
                                             {{ form_widget(edit_form.color , { 'id': 'colorpicker' }) }}
                                             {{ form_errors(edit_form.color) }}
-                                        <div  style="background-color: {{ agenda.color }};" class="col s12 m6 l6 center calendar-div-size"></div>
+                                        <div  style="background-color: {{ agenda.color }};" class="col s12 m6 l6 calendar-div-size"></div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row calendar-row valign-wrapper">
                             <div class="col s12 m6 l6 calendar-td valign-wrapper">
-                                <p class="calendar-p valign">Ajouter au slider :</p>
+                                <p class="calendar-p valign">Mettre en avant :</p>
                             </div>
                             <div class="col s12 m6 l6">
-                                {{ form_widget(edit_form.slider, { 'id': 'test5' }, { 'attr': {'class': 'calendar-responsive-input'} }) }}
-                                {{ form_errors(edit_form.slider) }}
+                                <div class="switch">
+                                    <label>
+                                        Off
+                                        {{ form_widget(edit_form.slider, { 'id': 'hide' }, { 'attr': {'class': 'checksize'} }) }}
+                                        {{ form_errors(edit_form.slider) }}
+                                        <span class="lever"></span>
+                                        On
+                                    </label>
+                                </div>
                             </div>
                         </div>
                         <div class="row upload_file_event calendar-row valign-wrapper">
@@ -93,17 +100,8 @@
                                 <p class="calendar-p valign">Ajouter une image (Max : 2Mo) :</p>
                             </div>
                             <div class="col s12 m6 l6">
-                                {{ form_widget(edit_form.image, { 'attr': {'class': 'calendar-responsive-input'} }) }}
-                                {{ form_errors(edit_form.image) }}
-                            </div>
-                        </div>
-                        <div class="row upload_file_event calendar-row valign-wrapper">
-                            <div class="col s12 m6 l6 calendar-td valign-wrapper">
-                                <p class="calendar-p valign">Ajouter une un lien à l'image :</p>
-                            </div>
-                            <div class="col s12 m6 l6">
-                                {{ form_widget(edit_form.lien, { 'id': 'textarea' }, { 'attr': {'col': '100'} }) }}
-                                {{ form_errors(edit_form.lien) }}
+                                {{ form_widget(edit_form.media, { 'attr': {'class': 'calendar-responsive-input'} }) }}
+                                {{ form_errors(edit_form.media) }}
                             </div>
                         </div>
                     </div>
@@ -124,7 +122,7 @@
                         </a>
 
                         <a class="btn-floating btn-large waves-effect waves-light blue darken-1 modal-action modal-close"
-                           href="{{ path('plate_forme_homepage') }}">
+                           href="{{ path('homepage') }}">
                             <i class="small material-icons">view_list</i>
                         </a>
                     </div>
