--- a/src/CalendarBundle/Resources/views/agenda/show.html.twig
+++ b/src/CalendarBundle/Resources/views/agenda/show.html.twig
@@ -62,22 +62,39 @@
                             <div class="col s12 m6 l6 calendar-td valign-wrapper">
                                 <p class="calendar-p valign">Couleur de l'évènement :</p>
                             </div>
-                            <div class="col s12 m6 s6 center">
+                            <div class="col s12 m6 s6 valign-wrapper">
                                 <div class="row">
-                                    <div  style="background-color: {{ agenda.color }};" class="col s12 calendar-div-size valign-wrapper">
-                                        <p class="valign center">{{ agenda.color }}</p>
+                                    <div class="align">
+                                        <div  style="background-color: {{ agenda.color }};" class="col s12 calendar-div-size valign-wrapper">
+                                            <p class="center-align">{{ agenda.color }}</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row calendar-row valign-wrapper">
                             <div class="col s12 m6 l6 calendar-td valign-wrapper">
-                                <p class="calendar-p valign">Image du slider :</p>
+                                <p class="calendar-p valign">Mettre en avant :</p>
                             </div>
-                            <div class="col s12 m6 l6 center">
-                                <img class="show-image responsive-img" src="{{ asset(agenda.media.picpath) }}"  alt="{{ agenda.media.picname }}">
+                            <div class="col s12 m6 l6">
+                                <p class="calendar-p">{% if agenda.slider %}Evènement ajouté{% else %}Evènement non ajouté{% endif %}</p>
                             </div>
                         </div>
+
+                        {% if agenda.media != null %}
+
+                            <div class="row">
+                                <div class="col s12 m6 l6 calendar-td valign-wrapper">
+                                    <p class="calendar-p valign">Image du slider :</p>
+                                </div>
+                                <div class="col s12 m6 l6 center">
+                                    <img class="show-image responsive-img" src="{{ asset(agenda.media.picpath) }}"  alt="{{ agenda.media.picname }}">
+                                </div>
+                            </div>
+
+                        {% else %}
+
+                        {% endif %}
                     </div>
 
                     <div class="center">
