--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Nathalie Sian Création{% endblock %}</title>
+        <title>
+            {% block title %}
+                Nathalie Sian Création
+            {% endblock %}</title>
         <link rel="icon" type="image/x-icon" href="{{ asset('') }}" />
         <!-- CSS -->
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css"> -->
