--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -1,25 +1,58 @@
-{% blok title %}
-    parent()
-    {{ status_text }}
-{% endblock %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Nathalie Sian Création {{ status_text }}</title>
+        <link rel="icon" type="image/x-icon" href="{{ asset('') }}" />
+        <!-- CSS -->
+        <link rel="stylesheet" href="{{ asset('css/materialize.min.css') }}" media="all">
+        <link rel="stylesheet" href="{{ asset('css/errors/errors_pages.css') }}" media="all">
+        <!-- FONTS -->
+        <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Allura|Dancing+Script|Great+Vibes|Lobster|Pacifico|Parisienne|Sacramento|Tangerine" rel="stylesheet">
+        <!-- ICONS -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    </head>
 
-    <link rel="stylesheet" href="{{ asset('css/errors/errors_pages.css') }}" media="all">
+    <body class="background-error">
 
-{% block stylesheets %}
-
-{% endblock %}
-
-{% block body %}
-
-    <div class="background-error">
-        <h1>Oops! une erreur est apparue</h1>
-        <h2>The server returned a "{{ status_code }} {{ status_text }}".</h2>
-
-        <div>
-            Something is broken. Please let us know what you were doing when this error occurred.
-            We will fix it as soon as possible. Sorry for any inconvenience caused.
+        <div class="row font-color2">
+            <div class="col s12">
+                <div class="center-align">
+                    <h2>Oops! Ce n'est pas la bonne route!</h2>
+                </div>
+            </div>
         </div>
-    </div>
+        <div class="row font-color2">
+            <div class="col s12 m6 l5">
+                <div>
+                    <h3> Vous voilà au bord de la plage, prenez le temps d'observer le paysage.</h3>
+                </div>
+            </div>
+        </div>
+        <div class="row left font-color2">
+            <div class="col s12 m8 l7">
+                <div class="position-status">
+                    <h3 class="font-color1">Si vous lisez ce message, prévenez<span class="right"> l'administrateur :</span></h3>
+                    <h3 class="position-h3"> "{{ status_code }} {{ status_text }}".</h3>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="">
+                <a class="btn dropdown-button navbutton fsize grey darken-2" href="mailto:qq1@qqpart.com" data-activates="dropdown2">
+                    Contactez moi
+                </a>
+            </div>
+            <div class="">
+                <a class="btn dropdown-button navbutton fsize red darken-4" href="{{ path('homepage') }}" data-activates="dropdown2">
+                    Retour au menu
+                </a>
+            </div>
+        </div>
 
-{% endblock %}
+    </body>
+</html>
+
+
 
