--- a/app/Resources/views/subgallery/list.html.twig
+++ b/app/Resources/views/subgallery/list.html.twig
@@ -7,25 +7,58 @@
 
 {% block body %}
 
-    <div class="container">
+        {% if subGalleries != null  %}
 
-    {% for subGallery in subGalleries %}
+            <div class="container">
 
-        {% if subGallery is defined  %}
-            <div id="grid" class="main">
+            <div class="row"></div>
 
-                <div class="view">
-                    <div class="view-back">
-                        {#<span>{{ subGallery.sgallery }}</span>#}
-                        {#<span>{{ subGallery.id }}</span>#}
-                        {#<a class="modal-trigger" href="#modal1">?</a>#}
+                <div class="row">
+
+                {% for subGallery in subGalleries %}
+
+                    <div class="col s12 m4 l4">
+
+                        <div class="view">
+                            <a class="modal-trigger" href="#modal{{ subGallery.id }}">
+                                <img src="{{ asset(subGallery.media.picpath) }}" alt="{{ subGallery.media.picname }}" class="picsize"/>
+                            </a>
+                        </div>
+
+                        <!------------------------------- --------------- ------------------------------------->
+                        <!------------------------------- --------------- ------------------------------------->
+                        <!------------------------------- MODAL STRUCTURE ------------------------------------->
+                        <!------------------------------- --------------- ------------------------------------->
+                        <!------------------------------- --------------- ------------------------------------->
+
+                        <div id="modal{{ subGallery.id }}" class="modal modal-fixed-footer">
+                            <div class="modal-content">
+                                <h4 class="center">{{ subGallery.sgallery }}</h4>
+                                <p>{{ subGallery.description }}</p>
+                                <p>{{ subGallery.prix }}</p>
+                            </div>
+                            <div class="modal-footer">
+                                {# ################# Si L'ADMIN EST ACTIF ###########################c#}
+                                {% if is_granted('ROLE_ADMIN') %}
+
+                                    <a href="{{ path('subgallery_edit', { 'id': subGallery.id }) }}" class="left">
+                                        <img src="{{ asset('images/local/icons/edit.svg') }}" class="plus-icon">
+                                    </a>
+                                    <a href="{{ path('subgallery_delete', { 'id': subGallery.id }) }}" class="left">
+                                        <img src="{{ asset('images/local/icons/delete.svg') }}" class="plus-icon">
+                                    </a>
+
+                                {% endif %}
+                                {# ################################################################## #}
+                                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Quitter</a>
+                            </div>
+                        </div>
+
                     </div>
-                    {#<img src="{{ asset(subGallery.media.picpath) | imagine_filter('my_thumb') }}" alt="{{ subGallery.media.picname }}" class="picsize"/>#}
-                    <a class="modal-trigger" href="#modal{{ subGallery.id }}">
-                        <img src="{{ asset(subGallery.media.picpath) }}" alt="{{ subGallery.media.picname }}" class="picsize"/>
-                    </a>
-                </div>
 
+                {% endfor %}
+
+                </div>
             </div>
 
         {% else %}
@@ -39,38 +72,6 @@
             </div>
 
         {% endif %}
-
-<!------------------------------- --------------- ------------------------------------->
-<!------------------------------- --------------- ------------------------------------->
-<!------------------------------- MODAL STRUCTURE ------------------------------------->
-<!------------------------------- --------------- ------------------------------------->
-<!------------------------------- --------------- ------------------------------------->
-
-        <div id="modal{{ subGallery.id }}" class="modal modal-fixed-footer">
-            <div class="modal-content">
-                <h4 class="center">{{ subGallery.sgallery }}</h4>
-                <p>{{ subGallery.description }}</p>
-                <p>{{ subGallery.prix }}</p>
-            </div>
-            <div class="modal-footer">
-                {# ################# Si L'ADMIN EST ACTIF ###########################c#}
-                {% if is_granted('ROLE_ADMIN') %}
-
-                    <a href="{{ path('subgallery_edit', { 'id': subGallery.id }) }}" class="left">
-                        <img src="{{ asset('images/local/icons/edit.svg') }}" class="plus-icon">
-                    </a>
-                    <a href="{{ path('subgallery_delete', { 'id': subGallery.id }) }}" class="left">
-                        <img src="{{ asset('images/local/icons/delete.svg') }}" class="plus-icon">
-                    </a>
-
-                {% endif %}
-                {# ################################################################## #}
-                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Quitter</a>
-            </div>
-        </div>
-
-    {% endfor %}
-    </div>
 
     <div class="container">
         <div class="row">
@@ -89,18 +90,5 @@
             </div>
         </div>
     </div>
-
-    {#<script type="text/javascript" src="{{ asset('js/effects/modernizr.custom.69142.js') }}"></script>#}
-
-    {#<script type="text/javascript">#}
-
-        {#Modernizr.load({test: Modernizr.csstransforms3d && Modernizr.csstransitions,#}
-            {#yep : ['{{ asset('js/jquery-3.2.1.min.js') }}','{{ asset('js/effects/jquery.hoverfold.js') }}'],#}
-            {#nope: '{{ asset('css/effects/fallback.css') }}',#}
-            {#callback : function( url, result, key ) {#}
-                {#if( url === '{{ asset('js/effects/jquery.hoverfold.js') }}' ) {#}
-                    {#$( '#grid' ).hoverfold();}}#}
-        {#});#}
-    {#</script>#}
 
 {% endblock %}
