--- a/app/Resources/views/subgallery/show.html.twig
+++ b/app/Resources/views/subgallery/show.html.twig
@@ -1,90 +1,140 @@
+{% if is_granted('ROLE_ADMIN') %}
+
 {% extends 'layout.html.twig' %}
 
 {% block body %}
 
-    {% if is_granted('ROLE_ADMIN') %}
+    <div class="container">
+        <div class="header-marge">
+            <div class="row">
+                <div class="col s12">
 
-        <div class="container">
-            <div class="header-marge">
-                <div class="row">
-                    <div class="col s12">
-
-                        <div class="row">
-                            <h1 class="center">Résultat de l'enregistrement</h1>
-                        </div>
-
-                        <div class="row">
-                            <div class="col s12 m6 l3">
-                                <p>Nom du nouvel objet :</p>
-                            </div>
-                            <div class="col s12 m6 l3">
-                                <p >{{ subGallery.sgallery }}</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col s12 m6 l3">
-                                <p>Description du nouvel objet :</p>
-                            </div>
-                            <div class="col s12 m6 l3">
-                                <p >{{ subGallery.description }}</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col s12 m6 l3">
-                                <p>Prix du nouvel objet :</p>
-                            </div>
-                            <div class="col s12 m6 l3">
-                                <p >{{ subGallery.prix }}</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col s12 m6 l3">
-                                <p>Photo du nouvel objet :</p>
-                            </div>
-                            <div class="col s12 m6 l3">
-                                <img src="{{ asset( subGallery.media.picpath) }}" alt="{{ subGallery.media.picname }}" class="picsize">
-                            </div>
-                        </div>
-
-                        <div class="center">
-
-                            <a href="{{ path('subgallery_edit', { 'id': subGallery.id }) }}"
-                               data-position="bottom"
-                               data-delay="50"
-                               data-tooltip="Accueil">
-                                <img src="{{ asset('images/local/icons/edit.svg') }}" class="plus-icon"
-                                     data-position="bottom"
-                                     data-delay="50"
-                                     data-tooltip="Accueil">
-                            </a>
-
-                            <a class="plus-icon" href="{{ path('homepage') }}">
-                                <img src="{{ asset('images/local/icons/home-icon.svg') }}" class="plus-icon"
-                                     data-position="bottom"
-                                     data-delay="50"
-                                     data-tooltip="Accueil">
-                            </a>
-                        </div>
-
+                    <div class="row">
+                        <h1 class="center">Résultat de l'enregistrement</h1>
                     </div>
+
+                    <div class="row">
+                        <div class="col s12 m6 l3">
+                            <p>Nom du nouvel objet :</p>
+                        </div>
+                        <div class="col s12 m6 l3">
+                            <p >{{ subGallery.sgallery }}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12 m6 l3">
+                            <p>Description du nouvel objet :</p>
+                        </div>
+                        <div class="col s12 m6 l3">
+                            <p >{{ subGallery.description }}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12 m6 l3">
+                            <p>Prix du nouvel objet :</p>
+                        </div>
+                        <div class="col s12 m6 l3">
+                            <p >{{ subGallery.prix }}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12 m6 l3">
+                            <p>Photo du nouvel objet :</p>
+                        </div>
+                        <div class="col s12 m6 l3">
+                            <img src="{{ asset( subGallery.media.picpath) }}" alt="{{ subGallery.media.picname }}" class="picsize">
+                        </div>
+                    </div>
+
+                    <div class="center">
+
+                        <a href="{{ path('subgallery_edit', { 'id': subGallery.id }) }}"
+                           data-position="bottom"
+                           data-delay="50"
+                           data-tooltip="Accueil">
+                            <img src="{{ asset('images/local/icons/edit.svg') }}" class="plus-icon"
+                                 data-position="bottom"
+                                 data-delay="50"
+                                 data-tooltip="Accueil">
+                        </a>
+
+                        <a class="plus-icon" href="{{ path('homepage') }}">
+                            <img src="{{ asset('images/local/icons/home-icon.svg') }}" class="plus-icon"
+                                 data-position="bottom"
+                                 data-delay="50"
+                                 data-tooltip="Accueil">
+                        </a>
+                    </div>
+
                 </div>
             </div>
         </div>
-
-    {% else %}
-
-        <div class="container">
-            <div class="row center">
-                <div class="col s12">
-                    <img src="{{ asset('images/local/icons/warning-icon1.svg') }}" class="warning">
-                </div>
-                <div class="col s12">
-                    <h2 class="center-align">La page Que vous recherchez n'existe pas</h2>
-                </div>
-            </div>
-
-        </div>
-
-    {% endif %}
+    </div>
 
 {% endblock %}
+
+{% else %}
+
+    {% block error %}
+
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Nathalie Sian Création {{ status_text }}</title>
+        <link rel="icon" type="image/x-icon" href="{{ asset('') }}" />
+        <!-- CSS -->
+        <link rel="stylesheet" href="{{ asset('css/materialize.min.css') }}" media="all">
+        <link rel="stylesheet" href="{{ asset('css/errors/errors_pages.css') }}" media="all">
+        <!-- FONTS -->
+        <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Allura|Dancing+Script|Great+Vibes|Lobster|Pacifico|Parisienne|Sacramento|Tangerine" rel="stylesheet">
+        <!-- ICONS -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    </head>
+
+    <body class="background-error">
+
+    <div class="row font-color2">
+        <div class="col s12">
+            <div class="center-align">
+                <h2>Oops! Ce n'est pas la bonne route!</h2>
+            </div>
+        </div>
+    </div>
+    <div class="row font-color2">
+        <div class="col s12 m6 l5">
+            <div>
+                <h3> Vous voilà au bord de la plage, prenez le temps d'observer le paysage.</h3>
+            </div>
+        </div>
+    </div>
+    <div class="row left font-color2">
+        <div class="col s12 m8 l7">
+            <div class="position-status">
+                <h3 class="font-color1">Si vous lisez ce message, prévenez<span class="right"> l'administrateur :</span></h3>
+                <h3 class="position-h3"> "{{ status_code }} {{ status_text }}".</h3>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="">
+            <a class="btn dropdown-button navbutton fsize grey darken-2" href="mailto:qq1@qqpart.com" data-activates="dropdown2">
+                Contactez moi
+            </a>
+        </div>
+        <div class="">
+            <a class="btn dropdown-button navbutton fsize red darken-4" href="{{ path('homepage') }}" data-activates="dropdown2">
+                Retour au menu
+            </a>
+        </div>
+    </div>
+
+    </body>
+    </html>
+
+    {% endblock %}
+
+{% endif %}
+
+
