--- a/app/Resources/views/about/new.html.twig
+++ b/app/Resources/views/about/new.html.twig
@@ -59,6 +59,8 @@
 
 {% else %}
 
+    {% block error %}
+
     <!DOCTYPE html>
     <html>
     <head>
@@ -115,5 +117,6 @@
     </body>
     </html>
 
+    {% endblock %}
 
 {% endif %}
