--- a/app/Resources/views/gallery/edit.html.twig
+++ b/app/Resources/views/gallery/edit.html.twig
@@ -71,6 +71,8 @@
 
 {% else %}
 
+    {% block error %}
+
     <!DOCTYPE html>
     <html>
     <head>
@@ -127,6 +129,7 @@
     </body>
     </html>
 
+    {% endblock %}
 
 {% endif %}
 
