--- a/app/Resources/views/gallery/new.html.twig
+++ b/app/Resources/views/gallery/new.html.twig
@@ -60,6 +60,8 @@
 
 {% else %}
 
+    {% block error %}
+
     <!DOCTYPE html>
     <html>
     <head>
@@ -116,5 +118,6 @@
     </body>
     </html>
 
+    {% endblock %}
 
 {% endif %}
