--- a/app/Resources/views/header/edit.html.twig
+++ b/app/Resources/views/header/edit.html.twig
@@ -59,6 +59,8 @@
 
 {% else %}
 
+    {% block error %}
+
     <!DOCTYPE html>
     <html>
     <head>
@@ -114,5 +116,7 @@
 
     </body>
     </html>
+
+    {% endblock %}
 
 {% endif %}
