--- a/app/Resources/views/about/index.html.twig
+++ b/app/Resources/views/about/index.html.twig
@@ -62,6 +62,8 @@
 
 {% else %}
 
+    {% block error %}
+
     <!DOCTYPE html>
     <html>
     <head>
@@ -118,6 +120,7 @@
     </body>
     </html>
 
+    {% endblock %}
 
 {% endif %}
 
