--- a/app/Resources/views/gallery/index.html.twig
+++ b/app/Resources/views/gallery/index.html.twig
@@ -23,6 +23,8 @@
 
 {% else %}
 
+    {% block error %}
+
     <!DOCTYPE html>
     <html>
     <head>
@@ -78,6 +80,8 @@
 
     </body>
     </html>
+
+    {% endblock %}
 
 {% endif %}
 
