--- a/app/Resources/views/gallery/show.html.twig
+++ b/app/Resources/views/gallery/show.html.twig
@@ -53,6 +53,8 @@
 
 {% else %}
 
+    {% block error %}
+
     <!DOCTYPE html>
     <html>
     <head>
@@ -109,5 +111,6 @@
     </body>
     </html>
 
+    {% endblock %}
 
 {% endif %}
