--- a/app/Resources/views/gallery/show_all.html.twig
+++ b/app/Resources/views/gallery/show_all.html.twig
@@ -66,6 +66,8 @@
 
 {% else %}
 
+    {% block error %}
+
     <!DOCTYPE html>
     <html>
     <head>
@@ -122,6 +124,7 @@
     </body>
     </html>
 
+    {% endblock %}
 
 {% endif %}
 
