--- a/app/Resources/views/header/new.html.twig
+++ b/app/Resources/views/header/new.html.twig
@@ -50,6 +50,8 @@
 
 {% else %}
 
+    {% block error %}
+
     <!DOCTYPE html>
     <html>
     <head>
@@ -106,5 +108,6 @@
     </body>
     </html>
 
+    {% endblock %}
 
 {% endif %}
