--- a/app/Resources/views/header/show_all.html.twig
+++ b/app/Resources/views/header/show_all.html.twig
@@ -56,6 +56,8 @@
 
 {% else %}
 
+    {% block error %}
+
     <!DOCTYPE html>
     <html>
     <head>
@@ -112,6 +114,7 @@
     </body>
     </html>
 
+    {% endblock %}
 
 {% endif %}
 
