--- a/app/Resources/views/partner/edit.html.twig
+++ b/app/Resources/views/partner/edit.html.twig
@@ -70,6 +70,8 @@
 
 {% else %}
 
+    {% block error %}
+
     <!DOCTYPE html>
     <html>
     <head>
@@ -126,6 +128,7 @@
     </body>
     </html>
 
+    {% endblock %}
 
 {% endif %}
 
