--- a/app/Resources/views/partner/index.html.twig
+++ b/app/Resources/views/partner/index.html.twig
@@ -53,6 +53,8 @@
 
 {% else %}
 
+    {% block error %}
+
     <!DOCTYPE html>
     <html>
     <head>
@@ -109,6 +111,7 @@
     </body>
     </html>
 
+    {% endblock %}
 
 {% endif %}
 
