--- a/app/Resources/views/partner/new.html.twig
+++ b/app/Resources/views/partner/new.html.twig
@@ -59,6 +59,8 @@
 
 {% else %}
 
+    {% block error %}
+
     <!DOCTYPE html>
     <html>
     <head>
@@ -115,6 +117,7 @@
     </body>
     </html>
 
+    {% endblock %}
 
 {% endif %}
 
