amelioration image list

--- a/app/Resources/views/subgallery/list.html.twig
+++ b/app/Resources/views/subgallery/list.html.twig
@@ -19,7 +19,7 @@
 
                     <div class="col s12 m4 l4">
 
-                        <div class="view">
+                        <div class="view back-picture">
                             <a class="modal-trigger" href="#modal{{ subGallery.id }}">
                                 <img src="{{ asset(subGallery.media.picpath) }}" alt="{{ subGallery.media.picname }}" class="picsize"/>
                             </a>
