--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,9 +17,10 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
-    <style>
-        {% block stylesheets %}{% endblock %}
-    </style>
+    <stylesheets>
+        {% block stylesheets %}
+        {% endblock %}
+    </stylesheets>
     <body>
 
         {% block header %}{% endblock %}
