--- a/app/Resources/views/subgallery/list.html.twig
+++ b/app/Resources/views/subgallery/list.html.twig
@@ -35,7 +35,10 @@
                             <div class="modal-content">
                                 <h4 class="center">{{ subGallery.sgallery }}</h4>
                                 <p>{{ subGallery.description }}</p>
-                                <p>{{ subGallery.prix }}</p>
+                                <div class="right">
+                                    <img src="{{ asset(subGallery.media.picpath) }}" alt="{{ subGallery.media.picname }}" class="picsize"/>
+                                    <p>{{ subGallery.prix }} €</p>
+                                </div>
                             </div>
                             <div class="modal-footer">
                                 {# ################# Si L'ADMIN EST ACTIF ###########################c#}
