--- a/app/Resources/views/gallery/show_all.html.twig
+++ b/app/Resources/views/gallery/show_all.html.twig
@@ -86,7 +86,7 @@
                 <div class="col s12 m8 l7">
                     <div class="position-status">
                         <h3 class="font-color1">Si vous lisez ce message, prévenez<span class="right"> l'administrateur :</span></h3>
-                        <h3 class="position-h3"> "Erreur 404 - Page non trouvée".</h3>
+                        <h3 class="position-h3 font-color1"> "Erreur 404 - Page non trouvée".</h3>
                     </div>
                 </div>
             </div>
