--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -32,10 +32,21 @@
                         {% endif %}
                     </ul>
                 </div>
+
+                <!-- A METTRE EN ADMINISTRATION POUR CLIENT -->
                 <div class="col s12 m4 l4">
-                    <div class="center-align valign">
+                    <div class="font-size">
+                        <ul>
+                            <li>Showroom :</li>
+                            <li>13 Chemin du Terroir</li>
+                            <li>77920 Samois sur seine</li>
+                            <li>tèl : </li>
+                            <li><a class="fontref" href="mailto:qq1@qqpart.com">nathalie.sian@yahoo.fr</a></li>
+                        </ul>
+                    </div>
+                    <div class="center-align ">
                         <a class="btn dropdown-button navbutton fsize" href="mailto:qq1@qqpart.com" data-activates="dropdown2">
-                            Contactez moi
+                            Contact
                         </a>
                     </div>
                 </div>
@@ -44,7 +55,7 @@
         <div class="footer-copyright">
             <div class="container font-href-foot center-align">
                 <a href="{{ path('fos_user_security_login') }}" class="login">©</a>
-                <a href="https://www.linkedin.com/in/julien-grima-927612129/">
+                <a href="https://www.linkedin.com/in/julien-grima-927612129/" class="fontref">
                     Créé et géré par Julien Grima
                 </a>
             </div>
