--- a/app/Resources/views/subgallery/list.html.twig
+++ b/app/Resources/views/subgallery/list.html.twig
@@ -25,9 +25,9 @@
 
                     <div class="col s12 m4 l4">
 
-                        <div class="view back-picture">
+                        <div class="">
                             <a class="modal-trigger" href="#modal{{ subGallery.id }}">
-                                <img id="{{ subGallery.id }}" src="{{ asset(subGallery.media.picpath) }}" data-zoom-image="{{ asset(subGallery.media.picpath) }}" alt="{{ subGallery.media.picname }}" class="picsize"/>
+                                <img id="{{ subGallery.id }}" src="{{ asset(subGallery.media.picpath) }}" data-zoom-image="{{ asset(subGallery.media.picpath) }}" alt="{{ subGallery.media.picname }}" class="picratio"/>
                             </a>
                         </div>
 
